<resources>
    <string name="app_name">Favo</string>
    <string name="package_name">ch.epfl.favo</string>
    <string name="app_name_extended">Favo App</string>
    <string name="app_site">https://github.com/favo-sdp/Favo</string>
    <string name="app_site_issues">https://github.com/favo-sdp/Favo/issues</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="no_email_text">No email</string>
    <string name="delete_account_alert">Are you sure you want to delete this account?</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account_label">Delete account</string>
    <string name="sign_out_failed">Sign out failed</string>
    <string name="delete_account_failed">Delete account failed</string>
    <string name="profile_picture_content_desc">Profile picture</string>
    <string name="used_providers">Provider used: %s</string>
    <string name="facebook_application_id" translatable="false">616130435602635</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb616130435602635</string>
    <string name="self_location">FavorRequest</string>
    <string name="nearby_favors_exception">Error when reading nearby favors from database</string>
    <string name="download_offline_map">https://support.google.com/maps/answer/6291838?co=GENIE.Platform%3DiOS&amp;hl=en</string>
    <string name="hint_drag_marker">Drag me</string>
    <string name="hint_click_window">Long press marker to drag</string>
    <string name="default_radius">10</string>
    <string name="setting_disabled">disabled</string>
    <string name="map_request_favor">Select Favor Location</string>
    <string name="map_edit_favor_loc">Edit Favor Location</string>
    <string name="map_share_loc">Share Favor Location</string>
    <string name="map_observe_loc">Observe Location</string>
    <string name="no_position_permission_tip">Please grant location permission</string>
    <string name="no_position_found_tip">We cannot fetch your location, please try later</string>
    <string name="report_unknown_error">Unknown error during fetching location</string>
    <string name="favor_title_hint">What do you need? - Max. length = %d</string>
    <string name="favor_img_content_desc">Descriptive image</string>
    <string name="favor_details_hint">Add more details - Max. length = %d</string>
    <string name="favor_payment_hint">Add payment (Default: free favor)</string>
    <string name="favor_location_hint">Add location</string>
    <string name="favor_confirm_button">Request Favor</string>
    <string name="favor_no_active_favor">You have no active favors</string>
    <string name="favor_no_archived_favor">You have no archived favors</string>
    <string name="active_favors_text">Active</string>
    <string name="archived_favors_text">Archived</string>
    <string name="favo_coins_item_placeholder">%.2f coins</string>
    <string name="user_name_item_placeholder">%s - </string>
    <string name="tab2_description">2</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="communicate">Communicate</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="app_lema">Help others help you</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="searchView_title">Search View</string>
    <string name="query_failed"> No results found</string>
    <string name="empty"> </string>
    <string name="query_hint">Enter search</string>
    <string name="favors_retrieval_failed_message">An error occurred. Check your internet connection</string>
    <string name="select_image_text">Select Image</string>
    <string name="favor_no_nearby_favor">There are no favors around you</string>
    <string name="list_toggle">List</string>
    <string name="map_toggle">Map</string>
    <string name="num_coins">%d coins</string>
    <string name="accept_favor">Accept</string>
    <string name="favor_respond_success_msg">Favor responded successfully.</string>
    <string name="home">Home</string>
    <string name="favor_request_success_msg">Favor added successfully.</string>
    <string name="profile">Profile</string>
    <string name="user_not_present_message">User account has been deleted</string>
    <string name="favor_worth">worth %.1f coin(s)</string>
    <string name="default_notification_channel_id" translatable="false">Default channel id</string>
    <string name="error_msg_image_request_view">Try again!</string>
    <string name="no_connection_message">No internet connection</string>
    <string name="offline_mode_dialog_title">Offline map support</string>
    <string name="offline_mode_instructions">You can enable offline map support by downloading offline maps from the Google Maps app</string>
    <string name="offline_mode_dialog_link">Show me how</string>
    <string name="finish_visit_marker">You have visited all nearby favors</string>
    <string name="save_draft_message">Draft saved: favor will be published as soon as connection returns</string>
    <string name="favor_delete_success_msg">Favor successfully deleted</string>
    <string name="messages_header">Account</string>
    <string name="notification_header">Notifications</string>
    <string name="help_header">Help</string>
    <string name="username_title">Username</string>
    <string name="notification_title">Enable nearby favor notifications</string>
    <string name="notification_summary">Be notified when new favors are posted in the area within a certain radius</string>
    <string name="notification_radius_title">Notifications radius in kilometers</string>
    <string name="notification_update_title">Enable updates notifications</string>
    <string name="notification_update_summary">Be notified when there is an update on a favor you created or committed</string>
    <string name="notification_chat_title">Enable chat notifications</string>
    <string name="notification_chat_summary">Be notified when someone writes a message in a chat of a favor created or committed</string>
    <string name="map_style_default_value">0</string>
    <string name="map_style_title">Map style</string>
    <string name="nearbyFavors_notifications_setting_key">nearbyFavors_notifications_setting_key</string>
    <string name="radius_notifications_setting_key">radius_notifications_setting_key</string>
    <string name="update_notifications_setting_key">update_notifications_setting_key</string>
    <string name="chat_notifications_setting_key">chat_notifications_setting_key</string>
    <string name="map_style_key">map_style</string>
    <string name="error_send_msg_chat">Error sending message</string>
    <string name="error_database_sync">Failed fetching data</string>
    <string name="help_title">Send feedback</string>
    <string name="help_subtitle">Report technical issues or suggest new features</string>
    <string name="request_favor_draft">Save draft</string>
    <string name="edit_favor">Edit</string>
    <string name="reuse_favor">Reuse</string>
    <string name="cancel_request">Cancel</string>
    <string name="delete_favor">Delete Request</string>
    <string name="favor_cancel_success_msg">Favor successfully cancelled</string>
    <string name="favor_cancel_success_msg_listView">Favor successfully cancelled. Swipe down to refresh</string>
    <string name="favor_edit_success_msg">Favor successfully updated</string>
    <string name="favor_complete_success_msg">Favor successfully completed</string>
    <string name="chat_message_detail_view">Start a chat</string>
    <string name="update_favor_error">Failed to perform operation</string>
    <string name="illegal_request_error">Max requested favors reached. Complete or cancel active favors</string>
    <string name="illegal_accept_error">Max accepted favors reached. Complete or cancel current favor.</string>
    <string name="favor_remotely_changed_msg">Favor has been updated by another!</string>
    <string name="restart_request">Re-enable</string>
    <string name="fail_edit_favor_request_view">Cannot edit favor</string>
    <string name="complete_favor">Complete</string>
    <string name="old_favor_accepted_by_others">Someone commit your unmodified favor</string>
    <string name="old_favor_cancelled_by_others">Someone cancel committing your unmodified favor</string>
    <string name="committed_helpers">Potential helpers"</string>
    <string name="cancel_commit">Cancel commit</string>
    <string name="commit_favor">Commit</string>
    <string name="title_map">Map</string>
    <string name="title_favors">Favors</string>
    <string name="open_chat">Open chat</string>
    <string name="start_chatting">No messages</string>
    <string name="hint_message">Write message</string>
    <string name="favors_created_format">Favors created: %d</string>
    <string name="favors_accepted_format">Favors accepted: %d</string>
    <string name="favors_completed_format">Favors completed: %d</string>
    <string name="likes_format">Positive\nfeedbacks: %d</string>
    <string name="dislikes_format">Negative\nfeedbacks: %d</string>
    <string name="feedback_message">Feedback received! Thanks for sharing your opinion</string>
    <string name="report_user_message">User has been reported! Thanks for your help</string>
    <string name="report_user_text">Report user</string>
    <string name="report_description">Report the user in case of inappropriate behaviour</string>
    <string name="feedback_description">Rate your experience with this user to help others</string>
    <string name="positive_feedback">All good!</string>
    <string name="negative_feedback">Bad experience</string>
    <string name="shop">Shop</string>
    <string name="balance_text">%.2f</string>
    <string name="price_text">%.2f CHF</string>
    <string name="shop_pay_message">Pay the price for the quantity of coins selected</string>
    <string name="favo_coins_text">Favo Coins</string>
    <string name="special_offers_text">Special offers</string>
    <string name="buy_favo_coins_text">Buy Favo Coins</string>
    <string name="invite_text">Invite</string>
    <string name="share_tip_checkout_favor">Check out this favor in the Favo App!</string>
    <string name="request_page_title">New favor</string>
    <string name="title_required_message">Title must be set to request a favor</string>
    <string name="fields_limit_exceeded_message">All fields must respect the required limits</string>
    <string name="report_favor_message">Favor has been reported! Thanks for your help</string>
    <string name="report_favor_text">Report</string>
    <string name="optional_text">Optional</string>
    <string name="picture_description_text">Upload a picture or take a photo</string>
    <string name="set_location_message">The favor location is set to your current position. Would you like to change it?</string>
    <string name="set_location_yes">Yes, take me to the map</string>
    <string name="set_location_no">No, my current position is fine</string>
    <string name="done_from_request_view">Done</string>
    <string name="share_location_message">Would you like to propose a new location or share your current location?</string>
    <string name="share_location_propose">I\'d like to share a new location</string>
    <string name="share_location_current">Share my current location</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>
    <string name="cancel">Cancel</string>
    <string name="commit">Commit</string>
</resources>