<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/username_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notification_header">
        <SwitchPreferenceCompat
            app:key="notifications_new"
            app:summary="@string/notification_summary"
            app:title="@string/notification_title" />
        <ListPreference
            app:defaultValue="10 Km"
            app:dependency="notifications_new"
            app:entries="@array/notification_radius"
            app:entryValues="@array/notification_radius"
            app:key="radius"
            app:title="@string/notification_radius_title"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:key="notifications_update"
            app:summary="@string/notification_update_summary"
            app:title="@string/notification_update_title" />
        <SwitchPreferenceCompat
            app:key="notifications_delete"
            app:summary="@string/notification_delete_summary"
            app:title="@string/notification_delete_title" />
        <SwitchPreferenceCompat
            app:key="notifications_join"
            app:summary="@string/notification_join_summary"
            app:title="@string/notification_join_title" />
        <SwitchPreferenceCompat
            app:key="notifications_chat"
            app:summary="@string/notification_chat_summary"
            app:title="@string/notification_chat_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/help_header">
        <Preference
            android:key="help"
            android:summary="@string/help_subtitle"
            android:title="@string/help_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/app_site_issues" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>
